--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -227,7 +227,42 @@
                 </div>
                 <div class="best_contents">
                     <div class="best_tour_contents">
-                        <div class="best_tour_contents_box" data-page="1"></div>
+                        <div class="best_tour_contents_box" data-page="1">
+                            <div>
+                                <div class="contents_img"><img src="../images/sub/busan1.jpg" alt=""></div>
+                                <div class="contents_note">
+                                    <div class="contents_filter">
+                                        <div class="filter_1">필터1</div>
+                                        <div class="filter_2">필터2</div>
+                                        <div class="filter_3">필터3</div>
+                                    </div>
+                                    <div class="contents_flex">
+                                        <div class="contents_info">
+                                            <h3>[부산이야기 기차여행 2탄]당일로 즐기는 SRT 부산여행</h3>
+                                            <p class="subway">부산역</p>
+                                            <div class="contents_info_1">
+                                                <img src="../images/sub/month.svg" alt="여행기간">
+                                                <span>여행기간</span>
+                                                <span>당일</span>
+                                            </div>
+                                            <div class="contents_info_2">
+                                                <img src="../images/sub/people.svg" alt="여행기간">
+                                                <span>출발인원</span>
+                                                <span>최소 4인</span>
+                                            </div>
+                                            <div class="tour_logo">
+                                                <img src="../images/sub/tourgongbang.png" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="contents_pay">
+                                            <p>성인기준</p>
+                                            <p><span>159,000</span>원~</p>
+                                        </div>
+                                    </div>
+                                    <a href="#">자세히보기</a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="best_tour_contents_box" data-page="1"></div>
                         <div class="best_tour_contents_box" data-page="1"></div>
                         <div class="best_tour_contents_box" data-page="1"></div>
