--- a/70_pf/SRT/section2.html
+++ b/70_pf/SRT/section2.html
@@ -27,9 +27,7 @@
             <span class="tour_btn">
                 <a href="#" class="tab_btn active">SRT 베스트 여행상품</a>
                 <a href="#" class="tab_btn">지역별 여행상품</a>
-                <a href="#" class="tab_btn">당일여행상품</a>
-                <a href="#" class="tab_btn">1박2일 여행상품</a>
-                <a href="#" class="tab_btn">3박3일 여행상품</a>
+                <a href="#" class="tab_btn">기간별 여행상품</a>
             </span>
         </div><!-- //.tabs -->
 
@@ -371,233 +369,10 @@
                 </ul>
             </div><!-- //.tour_area -->
         </div>
-        <div class="tour_carousel_container" id="content-3">
-            <div class="tour_area">
-                <ul class="tour_carousel">
-                    <li class="tour_carousel_contents">
-                        <div id="our_region">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image1.png" alt="여행썸네일1">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">부산역</p>
-                                <h3 class="tour_title">부산이야기 1탄</h3>
-                                <p class="tour_won">151,000원~</p>
-                                <p class="tour_way">&#91;여행공방&#93; 당일 &#183; 최소4인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_oneday">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image2.png" alt="여행썸네일2">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">익산역</p>
-                                <h3 class="tour_title">곡성 장미축제 &#183; 전주 한옥마을</h3>
-                                <p class="tour_won">119,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 당일 &#183; 최소10인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_oneTwo">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image3.png" alt="여행썸네일3">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">경주역</p>
-                                <h3 class="tour_title">경주 &#183; 울산 &#183; 부산여행</h3>
-                                <p class="tour_won">434,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div><!-- //.tour_area -->
-        </div>
-        <div class="tour_carousel_container" id="content-4">
-            <div class="tour_area">
-                <ul class="tour_carousel">
-                    <li class="tour_carousel_contents">
-                        <div id="our_region">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image1.png" alt="여행썸네일1">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">부산역</p>
-                                <h3 class="tour_title">부산이야기 1탄</h3>
-                                <p class="tour_won">151,000원~</p>
-                                <p class="tour_way">&#91;여행공방&#93; 당일 &#183; 최소4인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_oneday">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image2.png" alt="여행썸네일2">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">익산역</p>
-                                <h3 class="tour_title">곡성 장미축제 &#183; 전주 한옥마을</h3>
-                                <p class="tour_won">119,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 당일 &#183; 최소10인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_oneTwo">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image3.png" alt="여행썸네일3">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">경주역</p>
-                                <h3 class="tour_title">경주 &#183; 울산 &#183; 부산여행</h3>
-                                <p class="tour_won">434,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="tour_carousel_contents">
-                        <div id="tour_twoThree">
-                            <div class="tour_img">
-                                <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
-                                </a>
-                            </div>
-                            <div class="tour_text">
-                                <p class="station_name">광주송정역</p>
-                                <h3 class="tour_title">시인의 섬 보길도 &#183; 청산도 &#183; 해남</h3>
-                                <p class="tour_won">284,000원~</p>
-                                <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
-                            </div>
-                        </div>
-                    </li>
-
-                </ul>
-            </div><!-- //.tour_area -->
-        </div>
 
         <!-- 여행상품 더보기 -->
         <div class="tour_button">
-            <a href="#">SRT 여행상품 더보기</a>
+            <a href="sub/tour_best.html">SRT 여행상품 더보기</a>
         </div>
 
     </div><!-- //#section2 -->
