--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -259,7 +259,7 @@
                                             <p><span>159,000</span>원~</p>
                                         </div>
                                     </div>
-                                    <a href="#">자세히보기</a>
+                                    <a href="https://www.tour08.co.kr/home/goods_view/index.asp?ts=goods_day&strApart=B&strBpart=2&strCpart=2&goodsNum=1230" target="_blank">자세히보기</a>
                                 </div>
                             </div>
                         </div>
