--- a/70_pf/tourist2/footer.html
+++ b/70_pf/tourist2/footer.html
@@ -4,14 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
-    <title>tourlist</title>
-    <!-- 제이쿼리 라이브러리 -->
+    <title>TOURIST IN TOUR</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/slider.js"></script>
-    <!-- bx슬라이더 라이브러리 css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body>
@@ -29,9 +24,9 @@
                     <span class="br_line">대표전화
                         <span class="space0"><a href="tel:02-1234-5678">02-1234-5678</a></span>
                         <span class="gubun">/</span>
-                        <span class="br_line">E-mail
-                            <span class="space0"><a
-                                    href="mailto:titour@tourlisttour.com">titour@tourlisttour.com</a></span>
+                        <span class="br_line">E-mail :
+                            <span class="space0"><a href="mailto:titour@touristintour.com">titour@touristintour.com</a></span>
+                            <!-- 네이버 메일 연결하기 -->
                             <!-- <span class="space0"><a href="https://mail.naver.com/write/popup?srvid=note&to=id@naver.com">titour@touristintour.com</a></span> -->
                         </span>
                     </span>
@@ -43,7 +38,7 @@
                 <li><a href="#">sns2</a></li>
                 <li><a href="#">sns3</a></li>
             </ul>
-        </div><!-- box_inner -->
+        </div><!-- //.box_inner end -->
     </footer>
 </body>
 
