--- a/70_pf/tourist2/section3.html
+++ b/70_pf/tourist2/section3.html
@@ -6,54 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOURIST IN TOUR</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.min.js"></script>
-    <script src="js/slider.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/section3.css">
 </head>
 
 <body>
-    <!-- 헤더 -->
-    <header id="header">
-        <div class="box_inner">
-            <h1 class="logo"><a href="/index.html"><img src="https://picsum.photos/id/400/270/40" alt="로고"></a></h1>
-        </div>
-    </header>
-
-    <!-- 섹션1: PC 메인 롤링 -->
-    <div class="main_rolling_pc">
-        <div class="bxslider">
-            <div><img src="https://picsum.photos/id/337/1903/600" alt="이미지1"></div>
-            <div><img src="https://picsum.photos/id/338/1903/600" alt="이미지2"></div>
-            <div><img src="https://picsum.photos/id/339/1903/600" alt="이미지3"></div>
-        </div>
-    </div>
-    <!-- 섹션2: 인기 여행지 -->
-    <section class="about_area">
-        <div class="box_inner">
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <ul>
-                <li>
-                    <img src="https://picsum.photos/id/100/340/340" alt="이미지1">
-                    <h3>Lorem, ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, illum.</p>
-                    <a href="#">VIEW</a>
-                </li>
-                <li>
-                    <img src="https://picsum.photos/id/101/340/340" alt="이미지2">
-                    <h3>Lorem, ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, illum.</p>
-                    <a href="#">VIEW</a>
-                </li>
-                <li>
-                    <img src="https://picsum.photos/id/102/340/340" alt="이미지3">
-                    <h3>Lorem, ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, illum.</p>
-                    <a href="#">VIEW</a>
-                </li>
-            </ul>
-        </div>
-    </section>
     <!-- 섹션3: 상담 및 최근게시물 -->
     <div class="appbbs_area">
         <div class="box_inner">
