--- a/05_html+cs+js/3-6/3-6-01_사용자정의객체.html
+++ b/05_html+cs+js/3-6/3-6-01_사용자정의객체.html
@@ -73,18 +73,34 @@
         const info = {
             subject: 'css',
             credit: 1,
-            printOut: function() {
+            printOut: function () {
                 // this는 info이다.
                 return this.subject + ', ' + this.credit + '학점';
             }
         };
-        
+
 
 
         //객체 사용
         console.log(info.subject); // css
         console.log(info.credit); // 1
         console.log(info.printOut()); // css, 1학점
+
+
+
+        //심볼데이터
+        const information = {
+            subjectName: '자바스크립트',
+            subjectName: '제이쿼리'
+        }
+        console.log(information.subjectName);
+
+        const subjectName = Symbol();
+        const information2 = {
+            [subjectName]: '자바스크립트',
+            subjectName: '제이쿼리'
+        }
+        console.log(information2[subjectName]+ ', ' + information2.subjectName);
     </script>
 </body>
 
