--- a/70_pf/tourist2/header.html
+++ b/70_pf/tourist2/header.html
@@ -4,16 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
-    <title>tourlist</title>
-    <!-- 제이쿼리 라이브러리 -->
+    <title>TOURIST IN TOUR</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/slider.js"></script>
     <script src="js/nav.js"></script>
-    <!-- bx슬라이더 라이브러리 css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body>
@@ -26,7 +20,7 @@
             </div>
             <div class="nav_outer_box">
                 <h1 class="logo">
-                    <a href="/index.html"><img src="http://picsum.photos/id/200/270/40" alt="logo"></a>
+                    <a href="/index.html"><img src="https://picsum.photos/id/400/270/40" alt="로고"></a>
                 </h1>
                 <nav class="gnb">
                     <div class="nav_bg"></div>
@@ -58,7 +52,7 @@
                     </ul>
                 </nav>
             </div>
-        </div>
+        </div><!-- //.box_inner -->
     </header>
 </body>
 
