--- a/70_pf/tourist2/slide.html
+++ b/70_pf/tourist2/slide.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tourlist2:슬라이더</title>
-    <!-- bx슬라이더 라이브러리 css -->
+    <title>TOURIST2: 슬라이더</title>
+    <!-- bx슬라이더 CSS 라이브러리 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
     <!-- 제이쿼리 라이브러리 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- bx슬라이더 라이브러리 jq -->
+    <!-- bx슬라이더 JS 라이브러리 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.min.js"></script>
 </head>
 
 <body>
     <div class="bxslider">
-        <!--
+        <!-- 
             더미 이미지
-            http://placehold.co/
-            http://picsum.photos/
-        
+                1. https://picsum.photos/
+                2. https://placehold.co/
         -->
-
-        <div><img src="images/coffee2.jpg" alt="이미지1"></div>
-        <div><img src="images/coffee1.jpg" alt="이미지2"></div>
-        <div><img src="images/coffee3.jpg" alt="이미지3"></div>
+        <div><img src="https://picsum.photos/id/237/800/600" alt="이미지1"></div>
+        <div><img src="https://picsum.photos/id/238/800/600" alt="이미지1"></div>
+        <div><img src="https://picsum.photos/id/239/800/600" alt="이미지1"></div>
     </div>
 
     <script>
