--- a/70_pf/tourist2/test/sub1.html
+++ b/70_pf/tourist2/test/sub1.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>서브1</title>
 </head>
-
 <body>
     <h1>서브1 페이지</h1>
-    <a href="https://ooongi.github.io/w0310/70_pf/tourist2/test.html">메인페이지</a>
-    <a href="https://ooongi.github.io/w0310/70_pf/tourist2/test/sub1.html">서브1</a>
-    <a href="https://ooongi.github.io/w0310/70_pf/tourist2/test/sub2.html">서브2</a>
+    <a href="/w0310/70_pf/tourist2/test.html">메인</a>
+    <a href="/w0310/70_pf/tourist2/test/sub1.html">서브1</a>
+    <a href="/w0310/70_pf/tourist2/test/sub2.html">서브2</a>
 </body>
-
 </html>
