--- a/05_html+cs+js/3-6/3-6-01_객체.html
+++ b/05_html+cs+js/3-6/3-6-01_객체.html
@@ -54,6 +54,10 @@
                         console.log(person.name);
                         console.log(person.aboutMe());
 
+                객체 생성 방법
+                1. 리터럴
+                2. 생성자 함수
+                3. class(클래스) (ver.es6)
         */
         // //예> person 객체
         // const person = {
@@ -100,7 +104,9 @@
             [subjectName]: '자바스크립트',
             subjectName: '제이쿼리'
         }
-        console.log(information2[subjectName]+ ', ' + information2.subjectName);
+        console.log(information2[subjectName] + ', ' + information2.subjectName);
+
+
     </script>
 </body>
 
