--- a/70_pf/tourist2/sub/program.html
+++ b/70_pf/tourist2/sub/program.html
@@ -58,59 +58,8 @@
         </div><!-- //.box_inner -->
     </header>
 
-    <!-- 섹션1: PC 메인 롤링 -->
-    <div class="main_rolling_pc">
-        <div class="bxslider">
-            <div><img src="https://picsum.photos/id/337/1903/600" alt="이미지1"></div>
-            <div><img src="https://picsum.photos/id/338/1903/600" alt="이미지2"></div>
-            <div><img src="https://picsum.photos/id/339/1903/600" alt="이미지3"></div>
-        </div>
-    </div>
-    <!-- 섹션2: 인기 여행지 -->
-    <section class="about_area">
-        <div class="box_inner">
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <ul>
-                <li>
-                    <img src="https://picsum.photos/id/100/340/340" alt="이미지1">
-                    <h3>Lorem, ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, illum.</p>
-                    <a href="#">VIEW</a>
-                </li>
-                <li>
-                    <img src="https://picsum.photos/id/101/340/340" alt="이미지2">
-                    <h3>Lorem, ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, illum.</p>
-                    <a href="#">VIEW</a>
-                </li>
-                <li>
-                    <img src="https://picsum.photos/id/102/340/340" alt="이미지3">
-                    <h3>Lorem, ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, illum.</p>
-                    <a href="#">VIEW</a>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <!-- 섹션3: 상담 및 최근게시물 -->
-    <div class="appbbs_area">
-        <div class="box_inner">
-            <div class="link">
-                <a href="#"><img src="https://picsum.photos/id/301/294/100" alt="링크1"></a>
-                <a href="#"><img src="https://picsum.photos/id/302/294/100" alt="링크2"></a>
-            </div>
-            <div class="notice">
-                <h3>NOTICE</h3>
-                <ul>
-                    <li><a href="#">Lorem ipsum dolor sit amet consectetur.</a></li>
-                    <li><a href="#">Lorem ipsum dolor sit amet consectetur.</a></li>
-                    <li><a href="#">Lorem ipsum dolor sit amet consectetur.</a></li>
-                    <li><a href="#">Lorem ipsum dolor sit amet consectetur.</a></li>
-                    <li><a href="#">Lorem ipsum dolor sit amet consectetur.</a></li>
-                </ul>
-            </div><!-- //.notice end -->
-        </div><!-- //.box_inner -->
-    </div><!-- //.appbbs_area -->
+    <!-- 공지사항 -->
+
     <!-- 푸터 -->
     <footer>
         <div class="box_inner">
