--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -150,9 +150,12 @@
                                     <li><button type="button">전체</button></li>
                                 </ul>
                                 <ul>
-                                    <li><button type="button" class="filter_btn duration" data-filter="duration" data-value="당일">당일</button></li>
-                                    <li><button type="button" class="filter_btn duration" data-filter="duration" data-value="1박2일">1박2일</button></li>
-                                    <li><button type="button" class="filter_btn duration" data-filter="duration" data-value="2박3일">2박3일</button></li>
+                                    <li><button type="button" class="filter_btn duration" data-filter="duration"
+                                            data-value="당일">당일</button></li>
+                                    <li><button type="button" class="filter_btn duration" data-filter="duration"
+                                            data-value="1박2일">1박2일</button></li>
+                                    <li><button type="button" class="filter_btn duration" data-filter="duration"
+                                            data-value="2박3일">2박3일</button></li>
                                 </ul>
                             </div>
 
@@ -182,13 +185,20 @@
                                     <li><button type="button">전체</button></li>
                                 </ul>
                                 <ul>
-                                    <li><button type="button" class="filter_btn theme" data-filter="theme" data-value="기차여행">기차여행</button></li>
-                                    <li><button type="button" class="filter_btn theme" data-filter="theme" data-value="시티투어">시티투어</button></li>
-                                    <li><button type="button" class="filter_btn theme" data-filter="theme" data-value="축제">축제</button></li>
-                                    <li><button type="button" class="filter_btn theme" data-filter="theme" data-value="계절">계절</button></li>
-                                    <li><button type="button" class="filter_btn theme" data-filter="theme" data-value="체험">체험</button></li>
-                                    <li><button type="button" class="filter_btn theme" data-filter="theme" data-value="산/강/바다">산/강/바다</button></li>
-                                    <li><button type="button" class="filter_btn theme" data-filter="theme" data-value="관광지">관광지</button></li>
+                                    <li><button type="button" class="filter_btn theme" data-filter="theme"
+                                            data-value="기차여행">기차여행</button></li>
+                                    <li><button type="button" class="filter_btn theme" data-filter="theme"
+                                            data-value="시티투어">시티투어</button></li>
+                                    <li><button type="button" class="filter_btn theme" data-filter="theme"
+                                            data-value="축제">축제</button></li>
+                                    <li><button type="button" class="filter_btn theme" data-filter="theme"
+                                            data-value="계절">계절</button></li>
+                                    <li><button type="button" class="filter_btn theme" data-filter="theme"
+                                            data-value="체험">체험</button></li>
+                                    <li><button type="button" class="filter_btn theme" data-filter="theme"
+                                            data-value="산/강/바다">산/강/바다</button></li>
+                                    <li><button type="button" class="filter_btn theme" data-filter="theme"
+                                            data-value="관광지">관광지</button></li>
                                 </ul>
                             </div>
                         </div>
@@ -227,12 +237,15 @@
                 </div>
                 <div class="best_contents">
                     <div class="best_tour_contents">
-                        <div class="best_tour_contents_box" data-page="1">
+                        <div class="best_tour_contents_box" data-page="1" data-filter="duration" data-theme="기차여행" data-theme="관광지">
                             <div>
                                 <div class="contents_img"><img src="../images/sub/busan1.png" alt="부산기차여행1"></div>
                                 <div class="contents_note">
                                     <div class="contents_flex">
                                         <div class="contents_filter">
+                                            <div class="filter_tag duration">필터1</div>
+                                            <div class="filter_tag theme">필터2</div>
+                                            <div class="filter_tag theme">필터3</div>
                                         </div>
                                         <div class="contents_info">
                                             <h3>[부산이야기 기차여행 2탄]당일로 즐기는 SRT 부산여행</h3>
@@ -374,7 +387,8 @@
                         </div>
                         <div class="best_tour_contents_box" data-page="1">
                             <div>
-                                <div class="contents_img"><img src="../images/sub/dochodo.png" alt="서해4도홍도흑산도비금도초도"></div>
+                                <div class="contents_img"><img src="../images/sub/dochodo.png" alt="서해4도홍도흑산도비금도초도">
+                                </div>
                                 <div class="contents_note">
                                     <div class="contents_flex">
                                         <div class="contents_filter">
